--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SECRET_KEY=your_secret_key
+SECRET_KEY="70b108653324ba94296d62c798c883"
 SQLALCHEMY_DATABASE_URI=sqlite:///billpay.db
-PLAID_CLIENT_ID=your_plaid_client_id
-PLAID_SECRET=your_plaid_secret
+PLAID_CLIENT_ID="65ff7775e43110001dbb82c3"
+PLAID_SECRET="70b108653324ba94296d62c798c883"
 PLAID_ENV=sandbox
