--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.1.1
-Flask-SQLAlchemy==2.5.1
-Flask-Bcrypt==1.0.1
-Flask-Login==0.5.0
-Flask-Migrate==3.1.0
-python-dotenv==0.15.0
-plaid-python==8.1.0
+Flask
+Flask-SQLAlchemy
+Flask-Bcrypt
+Flask-Login
+Flask-Migrate
+python-dotenv
+plaid-python
+psycopg2-binary
